# silence-as-control

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DONATE.md  DONATIONS.md  Dockerfile  GLOSSARY.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  _pytest_windows_tmp.py  analyze.py  analyze_live_eval_openai.py  analyze_real_eval.py  api_prompt_log.jsonl  api_test_prompt.py  conftest.py  docker-compose.yml  environment.yml  example_agent_loop.py  generate_tasks.py  live_eval_openai.py  manifesto.md  pyproject.toml  real_eval_v2.py  requirements-dev.txt  requirements.txt  run.py  run_experiment.py  setup.py  silence_as_control.py  tasks_run4_300.jsonl  tasks_run5_1000.jsonl  test_silence_control.py
.github/: FUNDING.yml  pull_request_template.md
adapters/: http_api.py  langchain_adapter.py
agents/: por_silence.toml
api/: __init__.py  _repo_path.py  core_primitive.py  experimental_recovery.py  main.py  por_runtime.py  release_policy.py  xai_adapter.py  xai_wrapper.py
archive/: README.md
benchmarks/: release_risk_v4_capture_candidates.py  release_risk_v4_fixture_replay.py
core/: policy.py
data/: simpleqa_clean_100.jsonl  simpleqa_messy_100.jsonl
demo/: baseline_vs_por.py  baseline_vs_por_README.md  baseline_vs_por_results.json  baseline_vs_por_results.md  canonical_demo.py  canonical_runtime_demo.py  por_agent_demo.py  por_api_demo.py
demo_outputs/: baseline_demo_results.jsonl  por_agent_demo_report.md  por_demo_results.jsonl
demo_outputs_api/: por_api_demo_report.md  por_api_demo_results.jsonl
docs/: FAQ.md  (+77 more)
(+248 files in other folders)
