[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silence-as-control"
version = "0.1.0"
description = "Control-layer primitive for AI systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/SemeAIPletinnya/silence-as-control"

[tool.setuptools.packages.find]
where = ["src"]
